# tasks-flow-manager

./: .claudeignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/api/api_v1/: api.py  flow.py  tasks.py
app/core/: condition_evaluator.py  config.py  dependencies.py  flow_engine.py  flow_loader.py  logging.py  mongo_flow_loader.py  registry.py  task_registry.py
app/models/: flow.py
app/tasks/: base_task.py  fetch_data_task.py  process_data_task.py  store_data_task.py
config/: flows.json
tests/: conftest.py  helpers.py
tests/api/: test_list_flows_api.py  test_run_flow_api.py  test_tasks_api.py
tests/unit/: test_base_task.py  test_condition_evaluator.py  test_flow_engine.py  test_flow_loader.py  test_models.py  test_task_registry.py
