[project]
name = "tasks-flow-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.3",
  "pytest>=9.0.2",
  "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "mypy>=1.20.0", "pytest-asyncio>=1.3.0"]

[tool.mypy]
mypy_path = "app"
explicit_package_bases = true

[tool.pyright]
extraPaths = ["app"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["app", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
